# jsc

./: .eslintrc.json  .gitignore  .gitmodules  CMakeLists.txt  INSTRS.txt  README.md  bun.lockb  index.js  index.ts  package-lock.json  package.json  tsconfig.json
benchmarks/: README.md
include/: estree.hpp  execution.hpp  execution_compiletime.hpp  runtime.hpp
scripts/: jsc_proxy.sh  prepare_hpp.sh  run_tests.sh
src/: CMakeLists.txt  compile.sh  compiler.js  compiler.ts  generate_json_ast.js  generator.js  generator.ts  jsc  optimizer.js  optimizer.ts  pretranspile.js  pretranspile.ts  prog.cpp  transpiler.js  transpiler.ts  walker.js
src/generator/: ArrayExpression.js  AssignmentExpression.js  AwaitExpression.js  BinaryExpression.js  BlockStatement.js  BreakStatement.js  CallExpression.js  ConditionalExpression.js  ContinueStatement.js  DebuggerStatement.js  EmptyStatement.js  ExpressionStatement.js  ForStatement.js  FunctionDeclaration.js  FunctionExpression.js  Identifier.js  IfStatement.js  Literal.js  MemberExpression.js  ObjectExpression.js  Program.js  ReturnStatement.js  SequenceExpression.js  SwitchStatement.js  ThisExpression.js  ThrowStatement.js  TryStatement.js  UnaryExpression.js  VariableDeclaration.js  WhileStatement.js  index.js
src/optimizer/: BinaryExpression.js  BinaryExpression.ts  Literal.js  Literal.ts  UnaryExpression.js  UnaryExpression.ts  VariableDeclaration.js  VariableDeclaration.ts  index.js  index.ts
src/walker/: ArrowFunctionExpression.js  ArrowFunctionExpression.ts  AssignmentExpression.js  AssignmentExpression.ts  BinaryExpression.js  BinaryExpression.ts  BreakStatement.js  BreakStatement.ts  ContinueStatement.js  ContinueStatement.ts  FunctionDeclaration.js  FunctionDeclaration.ts  FunctionExpression.js  FunctionExpression.ts  Identifier.js  Identifier.ts  LabeledStatement.ts  Literal.js  Literal.ts  Property.js  Property.ts  TaggedTemplateExpression.js  TaggedTemplateExpression.ts  TemplateLiteral.js  TemplateLiteral.ts  UpdateExpression.js  UpdateExpression.ts  VariableDeclaration.js  VariableDeclaration.ts  WithStatement.js  WithStatement.ts  YieldExpression.js  YieldExpression.ts  index.js
tests/: compilation_tests.robot  test.js  test0.js  test0_no_read.js  test_basic.js
tests/integration/: test_basic.js
tests/integration/sources/: comparison.js  console.js  const.js  let.js  math.js  test.js  typeof.js
tests/integration/sources/function/: function_statement_local_captures.js
tests/integration/sources/import/: export.js  import.js  import2.js
tests/integration/sources/loop/: do_while.js  for.js  for_in.js  for_of.js  while.js
tests/sources/: array.js  async.js  const.js  function.js  let.js  test_surma.js
tests/sources/function/: function_expression.js  function_expression_global_captures.js  function_expression_local_captures.js  function_expression_named.js  function_statement_global_captures.js
tests/sources/loop/: for.js  for_of.js
tests/units/: CMakeLists.txt  test_js.cpp
